2016-04-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/security-util.c (sec_tcp_conn_read_callback): do not free
	  rc

2016-04-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/tape_action.pl: Fix test

2016-04-14  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/planner.c (promote_highest_priority_incremental): Was not
	  promote the correct ep (possible infinite loop)

2016-04-13  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amutil.c (split_quoted_strings_for_amstatus): New
	  function to parse a line for Amanda::Status
	* common-src/amutil.h (split_quoted_strings_for_amstatus): Add
	  protoype
	* perl/Amanda/Util.swg:Swig split_quoted_strings_for_amstatus
	* perl/Amanda/Status.pm: Use split_quoted_strings_for_amstatus

2016-04-12  Jean-Louis Martineau <JMartineau@carbonite.com>
	* packaging/deb/amanda-backup-client.install,
	  packaging/deb/amanda-backup-server.install: Add etc/amanda/*

2016-04-12  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c (tape_action): Fix for parallel taper.

2016-04-12  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Status.pm: Fix worker status

2016-04-12  Jean-Louis Martineau <JMartineau@carbonite.com>
	* Allow multiple connections to a client with different auth

2016-04-11  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Makefile.am: Typo

2016-04-11  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Report/human.pm: Remove multiple output line.
	* server-src/driver.c: Fix after a TRY-AGAIN
	* installcheck/Makefile.am: Add catalogs/dumper-tryagain.cat
	* installcheck/amreport.pl: Add check for dumper-tryagain.cat
	* installcheck/catalogs/tapers.cat: Fix for new output
	* installcheck/catalogs/dumper-tryagain.cat: New test case

2016-04-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amcrc32chw.c: Add fall through comment
